# air-ec-mapping-engine

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini
docs/: decisions.md
fixtures/: README.md  iucs.json  iucs_source.json  iucs_target.json  mapping_config.json  runtimeContext.Profile.IUC_source.Profile.IUC_target.json  source_bundle.json  target_bundle.json
fixtures/execution_planning/: execution-planning-rerun.Profile.IUC_source.Profile.IUC_target.json
spec/: Mission-EC-2.0.txt  Mission-Execution-Protocol-2.0.txt  Mission-ExecutionPlanning-1.0.txt  Mission-Mapping-2.0.txt  TransformTable-1.0.schema.json
src/air_ecmap/: __init__.py  cli.py  execution_planning_core.py  execution_planning_execution.py  execution_planning_models.py  execution_planning_orchestrator.py  mapping.py  mapping_orchestrator.py  orchestrator.py  step1.py  step2.py  step3.py  step4.py  validation.py
tests/: conftest.py  spec_matrix.md  test_cli.py  test_execution_planning_cli.py  test_execution_planning_core.py  test_execution_planning_execution.py  test_execution_planning_models.py  test_mapping_orchestrator.py  test_orchestrator.py  test_smoke.py  test_spec_smoke.py  test_step1_prefilter.py  test_step2_oc.py  test_step3_ec.py  test_step4_profile_schema.py  test_validation_layer.py
tests/fixtures/execution_planning/: expected.execution-planning-validation.Profile.IUC_source.Profile.IUC_target.json  mapping.mra.Profile.IUC_source.Profile.IUC_target.json  runtimeContext.Profile.IUC_source.Profile.IUC_target.json  transformationTable.json
tools/: run_all_demo.ps1
